added doses routes, controller, views. Added doses list to cocktail's show

--- a/app/views/cocktails/index.html.erb
+++ b/app/views/cocktails/index.html.erb
@@ -6,4 +6,4 @@
   </div>
 <% end %>
 
-<%= link_to 'create new cocktail', cocktails_new_path %>
+<%= link_to 'create new cocktail', new_cocktail_path %>
